--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   get_storage: ^2.1.1
   flutter_credit_card: ^4.0.1
   flutter_launcher_icons: ^0.13.1
+  font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.2.6
 
 flutter_icons:
   android: true
