--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   font_awesome_flutter: ^10.7.0
   url_launcher: ^6.2.6
+  image_picker: ^0.8.4+4
 
 flutter_icons:
   android: true
