--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   url_launcher: ^6.2.6
   image_picker: ^0.8.4+4
+  firebase_core: ^2.30.1
+  firebase_auth: ^4.19.4
 
 flutter_icons:
   android: true
